--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 			name="viewport"
 			content="width=device-width, initial-scale=1.0"
 		/>
-		<title>Animated Valentine's Delight</title>
+		<title>Самой Лучшей</title>
 		<link
 			rel="stylesheet"
 			href="styles.css"
